[package]
name = "perspective"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "perspective"

[lib]
name = "perspective"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
iced.workspace = true
image = "0.25.6"
nalgebra.workspace = true
num-traits.workspace = true
optimization = "0.2.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["fs", "io-util", "macros", "rt"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zoomer = {path = "components/zoomer"}
iced_renderer = { version = "0.13", features = ["wgpu"] }
[workspace]
members=["components/*", "feature-matching"]

[workspace.dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["debug", "tokio", "canvas", "image", "advanced"] }
iced_renderer = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["wgpu"] }
#iced = { version = "0.13.1", features = ["debug", "tokio", "canvas", "image", "advanced", "tiny-skia"] }
tracing = "0.1.41"
nalgebra = "0.33.2"
num-traits = "0.2.19"
#[profile.dev.package."*"]
#inherits = "release"
#opt-level = 3
