[package]
name = "perspective"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "perspective"

[lib]
name = "perspective"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
iced.workspace = true
image = "0.25.6"
nalgebra.workspace = true
num-traits.workspace = true
optimization = "0.2.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zoomer = {path = "components/zoomer"}
#iced_renderer = { version = "0.13", features = ["wgpu"] }
cv = { version = "0.6.0", git = "https://github.com/rust-cv/cv"}
lambda-twist = "0.7.0"
rand = { version = "0.9.2", features = ["small_rng"] }
arrsac = "0.11.0"
cv-pinhole = { version = "0.6.0" }
arrayvec = "0.7.6"

[workspace]
members=["components/*", "feature-matching"]

[workspace.dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["debug", "tokio", "canvas", "image", "advanced"] }
tracing = "0.1.41"
nalgebra = "0.34.0"
num-traits = "0.2.19"
#[profile.dev.package."*"]
#inherits = "release"
#opt-level = 3
