[package]
name = "feature-matching"
version = "0.1.0"
edition = "2021"

[dependencies]
cv = { version = "0.6.0", git = "https://github.com/rust-cv/cv"}
image = "0.24"
imageproc = "0.23"
open = "2.1.3"
tempfile = "3.20.0"
itertools = "0.10.5"
palette = "0.6.1"


arrsac = "0.10.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
space = "0.17.0"
bitarray = { version = "0.9.3", features = ["space"] }
tracing.workspace = true
