[package]
name = "feature-matching"
version = "0.1.0"
edition = "2021"

[dependencies]
cv = { version = "0.6.0", git = "https://github.com/rust-cv/cv"}
image = "0.25"
imageproc = "0.25"
open = "5.3.2"
tempfile = "3.21.0"
itertools = "0.14.0"
palette = "0.7.6"


arrsac = "0.11.0"
rand = "0.9.2"
rand_pcg = "0.9.0"
space = "0.19.0"
bitarray = { version = "0.10.0", features = ["space"] }
tracing.workspace = true
